[gd_scene load_steps=10 format=3 uid="uid://dbfk4okiqc2ww"]

[ext_resource type="Script" path="res://Scripts/Entities/Plot.gd" id="1_jlxvq"]
[ext_resource type="Texture2D" uid="uid://cyfvbajvh6yqc" path="res://Assets/Plots/Arrow-Plot.png" id="2_bocmq"]
[ext_resource type="Texture2D" uid="uid://btxorf1kky7xw" path="res://Assets/Plots/EmptyPlot.png" id="3_t5smq"]
[ext_resource type="FontFile" uid="uid://cp0owd3je6i4e" path="res://Assets/Fonts/Silkscreen-Regular.ttf" id="4_rx2e1"]

[sub_resource type="Animation" id="Animation_rx35o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -60)]
}

[sub_resource type="Animation" id="Animation_4e1tm"]
resource_name = "ArrowFloat"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Arrow:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(0, -40), Vector2(0, -30), Vector2(0, -40), Vector2(0, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wng1r"]
_data = {
"ArrowFloat": SubResource("Animation_4e1tm"),
"RESET": SubResource("Animation_rx35o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1as8"]
size = Vector2(96, 59)

[sub_resource type="LabelSettings" id="LabelSettings_om6va"]
font = ExtResource("4_rx2e1")

[node name="Plot" type="Area2D"]
position = Vector2(129, 186)
script = ExtResource("1_jlxvq")
metadata/_edit_group_ = true

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wng1r")
}

[node name="PlantSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.402, 15)
scale = Vector2(1e-05, 1e-05)
centered = false
offset = Vector2(-15.809, -31.266)

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.34902)
position = Vector2(0, -60)
scale = Vector2(2, 2)
texture = ExtResource("2_bocmq")

[node name="PlotSprite" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_t5smq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 19.5)
shape = SubResource("RectangleShape2D_i1as8")

[node name="GrowTimer" type="Timer" parent="."]

[node name="ProgressBorders" type="ColorRect" parent="."]
visible = false
offset_left = -32.0
offset_top = 38.0
offset_right = 32.0
offset_bottom = 50.0
color = Color(0, 0, 0, 1)

[node name="ProgressBG" type="ColorRect" parent="."]
visible = false
offset_left = -30.0
offset_top = 40.0
offset_right = 30.0
offset_bottom = 48.0
color = Color(0.0980392, 0.129412, 0.00784314, 1)

[node name="Progress" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = 40.0
offset_right = -30.0
offset_bottom = 48.0
color = Color(0.258824, 0.823529, 0, 0.733333)

[node name="TimeLeft" type="Label" parent="."]
offset_left = -34.016
offset_top = 48.0
offset_right = 5.984
offset_bottom = 72.0
text = "
"
label_settings = SubResource("LabelSettings_om6va")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="GrowTimer" to="." method="_on_grow_timer_timeout"]
